[package]
name = "newtons-fractal"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
sdl2 = {version = "0.35.1", features = ["bundled", "unsafe_textures"]}
sdl2-sys = "0.35.1"

[profile.release]
opt-level = 2